# Solana-specific implementation for ZK storage path generation
[package]
name = "traverse-solana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Solana-specific implementation for ZK storage path generation"
keywords.workspace = true
categories.workspace = true

[features]
default = ["std"]
std = ["traverse-core/std", "dep:tokio", "dep:reqwest"]
no-std = ["traverse-core/no-std"]
minimal = ["traverse-core/minimal"]

# Solana SDK integration (optional due to dependency conflicts with Alloy ecosystem)
solana = ["dep:solana-sdk"]

# SPL Token integration for token account operations
spl-token = ["solana", "dep:spl-token", "dep:spl-associated-token-account"]

# Anchor framework integration for IDL parsing (requires solana feature)
anchor = ["solana", "dep:anchor-lang", "dep:anchor-syn"]

# Client integration with enhanced account proof support  
client = ["std", "dep:reqwest", "dep:tokio", "dep:valence-domain-clients"]

[dependencies]
traverse-core = { path = "../traverse-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
thiserror.workspace = true
sha2.workspace = true
base58.workspace = true
base64.workspace = true

# Solana-specific dependencies (optional - may conflict with Alloy ecosystem)
solana-sdk = { workspace = true, optional = true }
anchor-lang = { workspace = true, optional = true }
anchor-syn = { workspace = true, optional = true }
spl-token = { workspace = true, optional = true }
spl-associated-token-account = { version = "6.0", default-features = false, optional = true }

# Optional HTTP client for live account queries
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# Optional valence-domain-clients integration
valence-domain-clients = { git = "https://github.com/timewave-computer/valence-domain-clients.git", rev = "d2fd402366d54f4421c15c7b33ccd6eecbfbcd2b", features = ["solana"], optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

# Integration tests will be added later
# [[test]]
# name = "integration"
# required-features = ["std", "solana"] 